# carwatch

./: .gitignore  README.md  pyproject.toml  tui.py
.github/workflows/: release.yml
lib/: finnwatch_core.py  finnwatch_tui.py
lib/carwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
