[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finnwatch"
dynamic = ["version"]
description = "Monitor finn.no classifieds for changes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "textual",
    "rich",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
# finnwatch_core and finnwatch_tui live in lib/ as top-level modules.
py-modules = ["finnwatch_core", "finnwatch_tui"]
package-dir = {"" = "lib"}
# fw-crawl and fw-recheck are standalone Python scripts; their sys.path.insert
# is harmless when installed because the modules are already on the Python path.
script-files = ["bin/fw-tui", "bin/fw-crawl", "bin/fw-recheck"]
